[package]
edition      = "2024"
name         = "zewonia"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "zewonia"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.1.0-rc.0", features = ["defmt", "esp32", "unstable"] }
esp-rtos = { version = "0.3.0", features = [
  "defmt",
  "embassy",
  "esp32",
] }
defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32"] }
embassy-net = { version = "0.9.0", features = ["defmt", "dhcpv4", "medium-ethernet", "medium-ip", "tcp", "udp", "dns"] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-backtrace = { version = "0.19.0", features = [
  "defmt",
  "esp32",
  "panic-handler",
] }
embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt"] }
smoltcp = { version = "0.13.0", default-features = false, features = [
  "defmt",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-tcp",
  "socket-udp",
  "medium-ip"
] }
critical-section = "1.2.0"
static_cell      = "2.1.1"
embassy-sync = "0.8.0"
a76xx = { path = "../../.", features = ["defmt"]  }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
heapless = { version = "0.9.2", features = ["defmt"] }
reqwless =  { version = "0.14.0", features = ["defmt"], default-features = false }
esp-println = { version = "0.17.0", features = ["defmt-espflash", "esp32"] }
embassy-net-ppp = { version = "0.3.0", features = ["defmt"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
